[package]
name = "slick"
version = "0.15.2"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "async ZSH prompt"
documentation = "https://github.com/nbari/slick/blob/master/README.md"
homepage = "https://github.com/nbari/slick"
repository = "https://github.com/nbari/slick"
readme = "README.md"
keywords = ["prompt", "zsh", "shell", "terminal", "git"]
categories = ["command-line-utilities", "command-line-interface"]
license = "BSD-3-Clause"
edition = "2024"

[features]
default = []
musl = ["openssl/vendored"]

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
clap = "4"
compound_duration = "2"
git2 = "0.20"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "process", "macros", "time"] }
uzers = "0.12"

[dev-dependencies]
tempfile = "3"
criterion = "0.7"

[[bench]]
name = "prompt_bench"
harness = false

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/slick", dest = "/usr/bin/slick", mode = "0755" },
]

[package.metadata.deb]
assets = [
  ["target/release/slick", "/usr/bin/slick", "755"],
]
depends = ""
